--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, 
    <!-- Ganti Audio di sini --><audio id="linkmp3">https://feeldreams.github.io/hayoloh/inow.mp3</audio>
    
    <div id="bodyblur">
-     <!-- Wallpaper --><img src="https://feeldreams.github.io/pics/awan/2.jpg" id="wallpaper"/>
+     <!-- Wallpaper --><img src="https://github.com/Ucupp3/yul.github.io/blob/index/IMG_20230805_102715_337.jpg" id="wallpaper"/>
    </div>
 
    <div id='Content'>
