--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, 
    <!-- Ganti Audio di sini --><audio id="linkmp3">https://feeldreams.github.io/hayoloh/inow.mp3</audio>
    
    <div id="bodyblur">
-     <!-- Wallpaper --><img src="https://github.com/Ucupp3/yul.github.io/blob/index/IMG_20230805_102715_337.jpg" id="wallpaper"/>
+     <!-- Wallpaper --><img src="IMG_20230805_102715_337.jpg" id="wallpaper"/>
    </div>
 
    <div id='Content'>
@@ -54,7 +54,7 @@ html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, 
        </div>
 
        <!-- Konten Pertanyaan -->
-       <p id="kalimat">Yull...<br>ndak baa kalau cuma ma anggap iko tes <br> so, lai Nio jo ziq? 🤭❤️<br><span id="pesanTolak" style="opacity:0;font-size: 15px;font-weight: 400;transform:scale(0);transition: all .6s ease;position: absolute;display: flex;justify-content: center;">Harus mau dong! 😝</span></p>
+       <p id="kalimat">Yull...<br>ndak baa kalau cuma ma anggap iko tes <br> so, will you be my girl? 🤭❤️<br><span id="pesanTolak" style="opacity:0;font-size: 15px;font-weight: 400;transform:scale(0);transition: all .6s ease;position: absolute;display: flex;justify-content: center;">Harus mau dong! 😝</span></p>
        <p id="kalimatb"></p>
        <p id="kalimatc"></p>
 
@@ -67,7 +67,7 @@ html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, 
        <!-- Konten Jawaban 2 -->
        <p id="kalimat3">Gak jadi deh! 😜</p>
        <p id="kalimatb3">Kamu beneran jadi pacar<br>aku kok, jiaakhhh 🤣❤️</p>
-       <p id="kalimatc3"><b>i love uuuu 😍💗🤍</b></p>
+       <p id="kalimatc3"><b> love uuuu Yuliaa..😍💗🤍</b></p>
      </blockquote></div>
 
      <!-- Tombol Multifungsi -->
