--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/><meta content='IE=edge' http-equiv='X-UA-Compatible'/>
 <head>
-<title>Script HTML Kamu Mau Gak Jadi Pacar Aku?</title>
+<title>Something?</title>
 <meta name="description" content="Tapi Kita Akan Putus dalam Waktu">
 <meta name="keywords" content="Kamu Mau Gak Jadi Pacar Aku Tapi Kita Akan Putus dalam Waktu">
 <link rel="icon" type="image/x-icon" href="https://www.palingit.com/favicon.ico">
@@ -54,36 +54,36 @@ html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, 
        </div>
 
        <!-- Konten Pertanyaan -->
-       <p id="kalimat">Yull...<br>ndak baa kalau cuma ma anggap iko tes <br> so, will you be my girl? 🤭❤️<br><span id="pesanTolak" style="opacity:0;font-size: 15px;font-weight: 400;transform:scale(0);transition: all .6s ease;position: absolute;display: flex;justify-content: center;">Harus mau dong! 😝</span></p>
-       <p id="kalimatb"></p>
-       <p id="kalimatc"></p>
+       <p id="kalimat">Yull...<br>skali kini serius...<br><span id="pesanTolak" style="opacity:0;font-size: 15px;font-weight: 400;transform:scale(0);transition: all .6s ease;position: absolute;display: flex;justify-content: center;">Harus mau dong! 😝</span></p>
+       <p id="kalimatb">walau ziq tau baa jawab yull..</p>
+       <p id="kalimatc">kalau ndak nio kaluaan se dari website nyo...<br> lai nio yull jo ziq??</p>
 
        <!-- Konten Jawaban -->
-       <p id="kalimat2">Yeaayy! 😆</p>
+       <p id="kalimat2">Seriuss nio???! 😆</p>
        <p id="kalimatb2">Makasih Yull.. 🤭❤️</p>
        <p id="kalimat2b">Eiittss..Tapi boonk 🏃</p>
        <p id="kalimatc2">Tapi kita akan <b>PUTUS</b><br>dalam waktu: <b id="ctimer" style="font-size:24px">5</b> 🫠</p>
 
        <!-- Konten Jawaban 2 -->
        <p id="kalimat3">Gak jadi deh! 😜</p>
-       <p id="kalimatb3">Kamu beneran jadi pacar<br>aku kok, jiaakhhh 🤣❤️</p>
+       <p id="kalimatb3">wak <br>jadian kini.. 🤣❤️</p>
        <p id="kalimatc3"><b> love uuuu Yuliaa..😍💗🤍</b></p>
      </blockquote></div>
 
      <!-- Tombol Multifungsi -->
      <div id="Tombol">
        <a id="By" onClick="multifungsi()">
-         <b id="tmbl">Mau</b>
+         <b id="tmbl">Nio</b>
        </a>
        
-       <a id="Bn" onClick="ditolak()">Gamau</a><a id="Bn2" onClick="ditolak2()"></a>
+       <a id="Bn" onClick="ditolak()">Ndak</a><a id="Bn2" onClick="ditolak2()"></a>
      </div>
      
    </div>
 
 <!-- Jangan Edit Bagian Ini -->
   <script>
-  ftom=0;jikapr=1;ftganti=0;flag=1;flagg=1;fungsi=0;Bn2.innerHTML=Bn.innerHTML;kalimat2b.style="display:none";function showDiv() {pesanwhatsapp = "Aku mau kok jadi pacarmu ><";Bn2.style.display="none";Content.style = "opacity:1;margin-top:10vh;";ket.style="margin-top:30px";}
+  ftom=0;jikapr=1;ftganti=0;flag=1;flagg=1;fungsi=0;Bn2.innerHTML=Bn.innerHTML;kalimat2b.style="display:none";function showDiv() {pesanwhatsapp = "wg nio jo ziq...";Bn2.style.display="none";Content.style = "opacity:1;margin-top:10vh;";ket.style="margin-top:30px";}
   function memulai(){suratin.style="transition:all .7s ease;transform:scale(10);opacity:0";ket.style="display:none";setTimeout(mulaikonten,500)}
   function mulaikonten() {otomatis();suratin.style="display:none";Content.style = "opacity:1;margin-top:10vh";bodyblur.style="opacity:.6;";wallpaper.style="transform: scale(1.5);opacity:1;";fotoakhir.style="display:inline-flex;";setTimeout(ftmuncul,200);bq.style = "position:relative;opacity:1;visibility:visible;transform: scale(1);border-radius:var(--bingkai);margin-top:0";fungsi=1;setTimeout(tombol,500);}
   function tunjukkan(){}
@@ -100,7 +100,7 @@ function hilangkan() {}
   
   function tombol(){Tombol.style="opacity:1;transform: scale(1);";Bn.style="margin:12px 0 12px 12px";ftom=1;}
   function multifungsi(){if(ftom==1){diterima();} if(ftom==5){menuju();}}
-  async function menuju(){await swals.fire('OK!', 'Kirim pesan ke WhatsApp aku, ya!', 'success');window.location = "https://api.whatsapp.com/send?phone=&text=" + pesanwhatsapp;Tombol.style="margin-top:15px;opacity:1;transform: scale(1);";} setTimeout(showDiv,100);
+  async function menuju(){await swals.fire('OK!', 'Ditunggu jawaban yul di wa ziq..', 'success');window.location = "https://api.whatsapp.com/send?phone=&text=" + pesanwhatsapp;Tombol.style="margin-top:15px;opacity:1;transform: scale(1);";} setTimeout(showDiv,100);
 
   const swalst = Swal.mixin({timer: 2777, allowOutsideClick: false, showConfirmButton: false, timerProgressBar: true, imageHeight: 100,}); audio = new Audio('' + linkmp3.innerHTML);const swals = Swal.mixin({allowOutsideClick: false, cancelButtonColor: '#FF0040', imageWidth: 100, imageHeight: 100,}); const style = document.createElement('style'); var today = new Date();var dd = String(today.getDate()).padStart(2, '0');var mm = String(today.getMonth() + 1).padStart(2, '0');var yyyy = today.getFullYear();const monthNames = ["Januari", "Februari", "Maret", "April", "Mei", "Juni", "Juli", "Agustus", "September", "Oktober", "November", "Desember"];today = dd + ' ' + monthNames[today.getMonth()] + ' ' + yyyy;
    const body = document.querySelector("body");
