--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@ html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, 
        </div>
 
        <!-- Konten Pertanyaan -->
-       <p id="kalimat">Yull...<br>skali kini serius...<br><span id="pesanTolak" style="opacity:0;font-size: 15px;font-weight: 400;transform:scale(0);transition: all .6s ease;position: absolute;display: flex;justify-content: center;">Harus mau dong! 😝</span></p>
+       <p id="kalimat">Yull...<br>skali kini serius...<p/>
        <p id="kalimatb">walau ziq tau baa jawab yull..</p>
-       <p id="kalimatc">kalau ndak nio kaluaan se dari website nyo...<br> lai nio yull jo ziq??</p>
+       <p id="kalimatc">kalau ndak nio kaluaan se dari website nyo...<br> lai nio yull jo ziq??<br><span id="pesanTolak" style="opacity:0;font-size: 15px;font-weight: 400;transform:scale(0);transition: all .6s ease;position: absolute;display: flex;justify-content: center;">Tombol rusak.. kaluaan se.😝</span></p>
+
 
        <!-- Konten Jawaban -->
        <p id="kalimat2">Seriuss nio???! 😆</p>
@@ -64,6 +65,7 @@ html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, 
        <p id="kalimat2b">Eiittss..Tapi boonk 🏃</p>
        <p id="kalimatc2">Tapi kita akan <b>PUTUS</b><br>dalam waktu: <b id="ctimer" style="font-size:24px">5</b> 🫠</p>
 
+	     
        <!-- Konten Jawaban 2 -->
        <p id="kalimat3">Gak jadi deh! 😜</p>
        <p id="kalimatb3">wak <br>jadian kini.. 🤣❤️</p>
@@ -100,8 +102,7 @@ function hilangkan() {}
   
   function tombol(){Tombol.style="opacity:1;transform: scale(1);";Bn.style="margin:12px 0 12px 12px";ftom=1;}
   function multifungsi(){if(ftom==1){diterima();} if(ftom==5){menuju();}}
-  async function menuju(){await swals.fire('OK!', 'Ditunggu jawaban yul di wa ziq..', 'success');window.location = "https://api.whatsapp.com/send?phone=&text=" + pesanwhatsapp;Tombol.style="margin-top:15px;opacity:1;transform: scale(1);";} setTimeout(showDiv,100);
-
+  async function menuju(){await swals.fire('OK!', 'Ditunggu jawaban yul di wa ziq..', 'success');window.location = "wa.me/6282346128215?text=yul%20nio%20ziq.."+ pesanwhatsapp;Tombol.style="margin-top:15px;opacity:1;transform: scale(1);";} setTimeout(showDiv,100);
   const swalst = Swal.mixin({timer: 2777, allowOutsideClick: false, showConfirmButton: false, timerProgressBar: true, imageHeight: 100,}); audio = new Audio('' + linkmp3.innerHTML);const swals = Swal.mixin({allowOutsideClick: false, cancelButtonColor: '#FF0040', imageWidth: 100, imageHeight: 100,}); const style = document.createElement('style'); var today = new Date();var dd = String(today.getDate()).padStart(2, '0');var mm = String(today.getMonth() + 1).padStart(2, '0');var yyyy = today.getFullYear();const monthNames = ["Januari", "Februari", "Maret", "April", "Mei", "Juni", "Juli", "Agustus", "September", "Oktober", "November", "Desember"];today = dd + ' ' + monthNames[today.getMonth()] + ' ' + yyyy;
    const body = document.querySelector("body");
 </script><!--
