--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, 
 
 	     
        <!-- Konten Jawaban 2 -->
-       <p id="kalimat3">Gak jadi deh! 😜</p>
+       <p id="kalimat3">Ndak jadi lai! 😜</p>
        <p id="kalimatb3">wak <br>jadian kini.. 🤣❤️</p>
        <p id="kalimatc3"><b> love uuuu Yuliaa..😍💗🤍</b></p>
      </blockquote></div>
